--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@
 // endbower
 
 @import 'cards';
+@import 'map';
 
 body {
   background-color: #F5F5F5;
@@ -20,6 +21,3 @@ body {
   margin-bottom: 20px;
   padding: 20px;
 }
-
-
-// Map control inputs
