--- a/app/views/main.html
+++ b/app/views/main.html
@@ -26,7 +26,7 @@
       </select>
     </div>
     <div class="small-12 large-4 columns">
-      <input id="mexicoMapSearch" type="text" placeholder="Buscar proyecto por nombre">
+      <input id="mexicoMapSearch" ng-model="main.filters.project" type="text" placeholder="Buscar proyecto por nombre">
     </div>
   </div>
 
