--- a/app/styles/_cards.scss
+++ b/app/styles/_cards.scss
@@ -55,6 +55,10 @@ h3 {
   width : 100%;
   max-width : 1200px;
 
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 62.5rem;
+
   .table__card {
     @extend .base--card;
     ul {
@@ -74,17 +78,17 @@ h3 {
 
       .row--title {
         @extend .card--column;
-        width: 30%;
+        width: 60%;
         font-weight: bold;
       }
       .row--subtitle {
         @extend .card--column;
-        width: 50%;
+        width: 20%;
       }
       .row--footer {
         @extend .card--column;
         width: 20%;
-        font-size: 12px;
+        // font-size: 12px;
       }
 
       &:hover {
