added a state filter to the map

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,6 +4,7 @@
     <h3>Transparencia Financiamiento</h3>
     <p>¿Qué es? es un mapa para visualizar manera geográfica el financiamiento
       climático que ha sido invertido a nivel nacional y estatal en México.</p>
+    {{main.filters.state}}
     {{main.filters.year}}
     {{main.filters.financing}}
     {{main.filters.focus}}
@@ -12,17 +13,22 @@
   <div class="small-12 large-12 columns">
     <div class="small-12 large-2 columns">
       <select id="mexicoMapYear" ng-model="main.filters.year" ng-options="year for year in main.options.years">
-        <option value="">-- A&ntilde;o --</option>
+        <option value=""> A&ntilde;o </option>
       </select>
     </div>
-    <div class="small-12 large-3 columns">
+    <div class="small-12 large-2 columns">
+      <select id="mexicoMapStates" ng-model="main.filters.state" ng-options="state for state in main.states">
+        <option value=""> Estado </option>
+      </select>
+    </div>
+    <div class="small-12 large-2 columns">
       <select id="mexicoMapFinancing" ng-model="main.filters.financing" ng-options="financing for financing in main.options.financing">
-        <option value="">-- Financiamiento --</option>
+        <option value=""> Financiamiento </option>
       </select>
     </div>
-      <div class="small-12 large-3 columns">
+      <div class="small-12 large-2 columns">
       <select id="mexicoMapFocus" ng-model="main.filters.focus" ng-options="focus for focus in main.options.focus">
-        <option value="">-- Enfoque --</option>
+        <option value=""> Enfoque </option>
       </select>
     </div>
     <div class="small-12 large-4 columns">
