--- a/app/views/main.html
+++ b/app/views/main.html
@@ -46,6 +46,19 @@
   </div>
 </div>
 
+<div id="totalInvestmenFooter" class="row">
+  <div class="small-12 large-6 columns text-center
+  small-12 large-6 columns text-center">
+    <h3>{{ main.kpis.investment }} USD</h3>
+    <p>Millones de d&oacute;lares invertidos</p>
+  </div>
+  <div class="small-12 large-6 columns text-center
+  small-12 large-6 columns text-center">
+    <h3>{{ main.results.length }}</h3>
+    <p>Proyectos de inversión</p>
+  </div>
+</div>
+
 <!-- <div class="row"> -->
   <!-- {{main.options}}
   {{main.dataset}} -->
