filters are now located to the right

--- a/app/styles/_cards.scss
+++ b/app/styles/_cards.scss
@@ -17,7 +17,7 @@ h3 {
   color: $grey-600;
   font-weight: 300;
   margin-top: $base_margin;
-  margin-bottom: $base_margin;
+  margin-bottom: $base_margin + 15px;
 }
 
 
