--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,10 +4,6 @@
     <h3>Transparencia Financiamiento</h3>
     <!-- <p>¿Qué es? es un mapa para visualizar manera geográfica el financiamiento
       climático que ha sido invertido a nivel nacional y estatal en México.</p> -->
-    {{main.filters.state}}
-    {{main.filters.year}}
-    {{main.filters.financing}}
-    {{main.filters.focus}}
   </div>
 
   <div class="small-12 large-9 columns">
@@ -16,21 +12,28 @@
 
   <div class="small-12 large-3 columns">
     <select class="map__filter" ng-model="main.filters.year" ng-options="year for year in main.options.years">
-      <option value=""> A&ntilde;o </option>
+      <option value="">Todos los a&ntilde;os</option>
     </select>
     <select class="map__filter" ng-model="main.filters.state" ng-options="state for state in main.states">
-      <option value=""> Estado </option>
+      <option value="">Todos los estados</option>
     </select>
     <select class="map__filter" ng-model="main.filters.financing" ng-options="financing for financing in main.options.financing">
-      <option value=""> Financiamiento </option>
+      <option value="">Cualquier financiamiento</option>
     </select>
     <select class="map__filter" ng-model="main.filters.focus" ng-options="focus for focus in main.options.focus">
-      <option value=""> Enfoque </option>
+      <option value="">Cualquier enfoques</option>
     </select>
     <select class="map__filter" ng-model="main.filters.status" ng-options="status for status in main.options.status">
-      <option value=""> Status </option>
+      <option value="">Cualquier status</option>
     </select>
-    <input class="map__filter" ng-model="main.filters.project" type="text" placeholder="Buscar proyecto por nombre">
+    <!-- <input class="map__filter" ng-model="main.filters.project" type="text" placeholder="Buscar proyecto por nombre"> -->
+    <div class="filters-tag-container">
+      {{main.filters.state}}
+      {{main.filters.year}}
+      {{main.filters.financing}}
+      {{main.filters.focus}}
+      {{main.filters.status}}
+    </div>
   </div>
 </div>
 
