--- a/app/views/main.html
+++ b/app/views/main.html
@@ -40,12 +40,12 @@
 <div id="totalInvestmenFooter" class="row">
   <div class="small-12 large-6 columns text-center
   small-12 large-6 columns text-center">
-    <h3>{{ main.kpis.investment }} USD</h3>
+    <h3>{{ main.kpis.investment | humanizeInt }} USD</h3>
     <p>Millones de d&oacute;lares invertidos</p>
   </div>
   <div class="small-12 large-6 columns text-center
   small-12 large-6 columns text-center">
-    <h3>{{ main.results.length }}</h3>
+    <h3>{{ main.results.length | humanizeInt }}</h3>
     <p>Proyectos de inversión</p>
   </div>
 </div>
@@ -75,7 +75,7 @@
         <li class="table--row" ng-repeat="record in ( main.results = (main.data.records | filter:main.filterRecords | filter:main.filters.project) )">
           <div class="row--title">{{ record.nombre_proyecto }}</div>
           <div class="row--subtitle">{{ record.region }}</div>
-          <div class="row--footer text-right">${{ record.cantidad }}.00</div>
+          <div class="row--footer text-right">${{ record.cantidad | humanizeInt }}.00</div>
         </li>
       </ul>
     </div>
