--- a/app/styles/_map.scss
+++ b/app/styles/_map.scss
@@ -1,7 +1,29 @@
+// States
 .default{
   stroke: #a9a9a9;
   stroke-width: .5;
 }
 .default:hover{
   fill-opacity:0.5;
+}
+
+// tooltip
+#tooltip {
+  position: absolute;
+  padding: 20px;
+  margin: 10px;
+  font: 12px sans-serif;
+  background: lightsteelblue;
+  border: 1px;
+  border-radius: 2px;
+  pointer-events: none;
+  background:rgba(0,0,0,0.9);
+  border:1px solid grey;
+  border-radius:5px;
+  font-size:12px;
+  width:auto;
+  padding:4px;
+  color:white;
+  opacity:0;
+  z-index: 10;
 }
