--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,8 +20,13 @@ body {
 
 .row {
   background-color: white;
-  margin-bottom: 20px;
-  padding: 20px;
+  // margin-bottom: 10px;
+  // padding: 20px;
+}
+
+.filters__tags {
+  margin-top: 20px;
+  background-color: $main_background_color;
 }
 
 .map__filter {
