--- a/app/views/main.html
+++ b/app/views/main.html
@@ -25,22 +25,11 @@
     <select class="map__filter" ng-model="main.filters.status" ng-options="status for status in main.options.status">
       <option value="">Cualquier status</option>
     </select>
-    <!-- <input class="map__filter" ng-model="main.filters.project" type="text" placeholder="Buscar proyecto por nombre"> -->
-    <div class="filters-tag-container">
-      <!-- Dynamic closable tags -->
-      <closable-tag value="main.filters.year"></closable-tag>
-      <closable-tag value="main.filters.state"></closable-tag>
-      <closable-tag value="main.filters.financing"></closable-tag>
-      <closable-tag value="main.filters.focus"></closable-tag>
-      <closable-tag value="main.filters.status"></closable-tag>
-    </div>
 
-    <div class="row">
-      <p class="map__legend"><span style="background-color: {{main.investmentColors[0]}};"></span>1 a 99,999</p>
-      <p class="map__legend"><span style="background-color: {{main.investmentColors[1]}};"></span>100,000 a 999,999</p>
-      <p class="map__legend"><span style="background-color: {{main.investmentColors[2]}};"></span>1M a 9,999,999</p>
-      <p class="map__legend"><span style="background-color: {{main.investmentColors[3]}};"></span>M&aacute;s de 10M</p>
-    </div>
+    <p class="map__legend"><span style="background-color: {{main.investmentColors[0]}};"></span>1 a 99,999</p>
+    <p class="map__legend"><span style="background-color: {{main.investmentColors[1]}};"></span>100,000 a 999,999</p>
+    <p class="map__legend"><span style="background-color: {{main.investmentColors[2]}};"></span>1M a 9,999,999</p>
+    <p class="map__legend"><span style="background-color: {{main.investmentColors[3]}};"></span>M&aacute;s de 10M</p>
 
   </div>
 </div>
@@ -56,6 +45,15 @@
     <h3>{{ main.results.length | humanizeInt }}</h3>
     <p>Proyectos de inversión</p>
   </div>
+</div>
+
+<div ng-show="main.filtersAvailable()" class="row filters__tags">
+  <!-- Dynamic closable tags -->
+  <closable-tag value="main.filters.year"></closable-tag>
+  <closable-tag value="main.filters.state"></closable-tag>
+  <closable-tag value="main.filters.financing"></closable-tag>
+  <closable-tag value="main.filters.focus"></closable-tag>
+  <closable-tag value="main.filters.status"></closable-tag>
 </div>
 
 <!-- <div class="row"> -->
