--- a/app/styles/_cards.scss
+++ b/app/styles/_cards.scss
@@ -20,6 +20,16 @@ h3 {
   margin-bottom: $base_margin + 15px;
 }
 
+p.record__property {
+  color: $grey-600;
+  margin: 0px;
+}
+
+a.record__property {
+  color: $brand-primary !important;
+}
+
+
 
 .card--column {
   float: left;
@@ -70,6 +80,7 @@ h3 {
     a {
       color: inherit;
       text-decoration: none;
+      padding: 0px;
     }
 
     .table--row {
