added a usd legend to tha ranges

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -26,6 +26,7 @@
       <option value="">Cualquier status</option>
     </select>
 
+    <p class="map__legend"><strong>Precios en d&oacute;lares (USD)</strong></p>
     <p class="map__legend"><span style="background-color: {{main.investmentColors[0]}};"></span>1 a 99,999</p>
     <p class="map__legend"><span style="background-color: {{main.investmentColors[1]}};"></span>100,000 a 999,999</p>
     <p class="map__legend"><span style="background-color: {{main.investmentColors[2]}};"></span>1M a 9,999,999</p>
