--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,8 @@
 <div id="introduction" class="row">
   <div class="small-12 large-12 columns">
-    <h3>Transparencia Financiamiento</h3>
-    <!-- <p>¿Qué es? es un mapa para visualizar manera geográfica el financiamiento
-      climático que ha sido invertido a nivel nacional y estatal en México.</p> -->
+    <h3>Financiamiento internacional para cambio climático en México</h3>
+    <p>¿Qué es? es un mapa para visualizar manera geográfica el financiamiento
+      climático que ha sido invertido a nivel nacional y estatal en México.</p>
   </div>
 
   <div class="small-12 large-9 columns">
