--- a/app/styles/_cards.scss
+++ b/app/styles/_cards.scss
@@ -94,6 +94,13 @@ h3 {
         border: 1px solid $brand-primary;
       }
     }
+
+    .table--row.selected {
+      color: white;
+      background-color: #2196F3;
+    }
+
+
   }
 
   .actions__card {
