--- a/app/views/main.html
+++ b/app/views/main.html
@@ -62,9 +62,9 @@
   <div class="table__card">
     <ul>
       <accordion close-others="false">
-        <accordion-group ng-repeat="record in ( main.results = (main.data.records | filter:main.filterRecords | filter:main.filters.project) )">
+        <accordion-group ng-repeat="record in ( main.results = (main.data.records | filter:main.filterRecords | filter:main.filters.project) )" is-open="main.isOpen[$index]">
           <accordion-heading>
-            <li class="table--row">
+            <li class="table--row" ng-class="{ 'selected': main.isOpen[$index] }">
               <div class="row--title">{{ record.nombre_proyecto }}</div>
               <div class="row--subtitle">{{ record.region }}</div>
               <div class="row--footer text-right">${{ record.cantidad | humanizeInt }}.00</div>
