--- a/app/views/main.html
+++ b/app/views/main.html
@@ -31,6 +31,8 @@
     <p class="map__legend"><span style="background-color: {{main.investmentColors[1]}};"></span>100,000 a 999,999</p>
     <p class="map__legend"><span style="background-color: {{main.investmentColors[2]}};"></span>1M a 9,999,999</p>
     <p class="map__legend"><span style="background-color: {{main.investmentColors[3]}};"></span>M&aacute;s de 10M</p>
+    <br />
+    <p class="map__legend">* Coloca el mouse sobre el estado para ver la inversión en éste</p>
 
   </div>
 </div>
@@ -38,12 +40,13 @@
 <div id="totalInvestmenFooter" class="row">
   <div class="small-12 large-6 columns text-center
   small-12 large-6 columns text-center">
-    <h3>{{ main.kpis.investment | humanizeInt }} USD</h3>
-    <p>Millones de d&oacute;lares invertidos</p>
+    <h3 style="margin-bottom:10px;">{{ main.kpis.investment | humanizeInt }} USD</h3>
+    <p style="margin-bottom:0px;">Millones de d&oacute;lares invertidos</p>
+    <p class="map__legend" style="margin-bottom:20px;">La suma es el total de los proyectos mostrados</p>
   </div>
   <div class="small-12 large-6 columns text-center
   small-12 large-6 columns text-center">
-    <h3>{{ main.results.length | humanizeInt }}</h3>
+    <h3 style="margin-bottom:10px;">{{ main.results.length | humanizeInt }}</h3>
     <p>Proyectos de inversión</p>
   </div>
 </div>
