--- a/app/views/main.html
+++ b/app/views/main.html
@@ -31,8 +31,7 @@
     <p class="map__legend"><span style="background-color: {{main.investmentColors[1]}};"></span>100,000 a 999,999</p>
     <p class="map__legend"><span style="background-color: {{main.investmentColors[2]}};"></span>1M a 9,999,999</p>
     <p class="map__legend"><span style="background-color: {{main.investmentColors[3]}};"></span>M&aacute;s de 10M</p>
-    <br />
-    <p class="map__legend">* Coloca el mouse sobre el estado para ver la inversión en éste</p>
+    <p class="map__legend" style="margin-top: 10px;">* Coloca el mouse sobre el estado para ver la inversi&oacute;n en &eacute;ste</p>
 
   </div>
 </div>
@@ -40,7 +39,7 @@
 <div id="totalInvestmenFooter" class="row">
   <div class="small-12 large-6 columns text-center
   small-12 large-6 columns text-center">
-    <h3 style="margin-bottom:10px;">{{ main.kpis.investment | humanizeInt }} USD</h3>
+    <h3 style="margin-bottom:10px;">${{ main.kpis.investment | humanizeInt }} USD</h3>
     <p style="margin-bottom:0px;">Millones de d&oacute;lares invertidos</p>
     <p class="map__legend" style="margin-bottom:20px;">La suma es el total de los proyectos mostrados</p>
   </div>
@@ -80,7 +79,7 @@
             <li class="table--row" ng-class="{ 'selected': main.isOpen[$index] }">
               <div class="row--title">{{ record.nombre_proyecto }}</div>
               <div class="row--subtitle">{{ record.region }}</div>
-              <div class="row--footer text-right">${{ record.cantidad | humanizeInt }}.00</div>
+              <div class="row--footer text-right">${{ record.cantidad | humanizeInt }}</div>
             </li>
           </accordion-heading>
 
