build the webapp

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -45,7 +45,7 @@
   </div>
   <div class="small-12 large-6 columns text-center
   small-12 large-6 columns text-center">
-    <h3 style="margin-bottom:10px;">{{ main.results.length | humanizeInt }}</h3>
+    <h3 style="margin-bottom:10px;">{{ main.results.length }}</h3>
     <p>Proyectos de inversión</p>
   </div>
 </div>
