added title to the webapp, resized the logos

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,19 +27,28 @@ body {
 
 .footer {
   background-color: initial;
+
+  .text-center {
+    margin-bottom: 20px;
+  }
+
   .footer-img-tall {
     width: 100px;
     margin-right: 50px;
   }
 
   .footer-img-fat {
-    width: 100px;
+    width: 200px;
     margin-right: 50px;
   }
   .footer-link {
     margin-left: 30px;
     margin-right: 30px;
     color: #757575;
+  }
+  .footer-message {
+    background-color: initial;
+    p { font-size: 12px; }
   }
 
 }
