--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,42 @@
+<div class="deck">
+  <div class="content__card">
+
+    <h3 class="text-center">Financiamiento internacional para cambio climático en M&eacute;xico</h3>
+
+    <p>
+      La plataforma para el registro y monitoreo de los recursos
+      destinados a la atenci&oacute;n del cambio clim&aacute;tico en M&eacute;xico es un sistema de
+      informaci&oacute;n p&uacute;blico y abierto que sistematiza la informaci&oacute;n sobre el
+      origen y destino de los recursos que M&eacute;xico recibe para proyectos,
+      programas y acciones destinados a la atenci&oacute;n del cambio clim&aacute;tico
+      en el pa&iacute;s.
+    </p>
+    <p>
+      Con esta plataforma se busca lograr que la informaci&oacute;n sobre el
+      financiamiento clim&aacute;tico en M&eacute;xico est&eacute; sistematizada y concentrada en un
+      formato de datos abiertos que le permita a la ciudadan&iacute;a analizar y
+      comparar los datos para un mejor monitoreo, reporte y verificaci&oacute;n sobre
+      los recursos que recibe el pa&iacute;s para atender este fen&oacute;meno clim&aacute;tico.
+    </p>
+    <p>
+      Los datos sobre los proyectos y los montos asignados son producto de un
+      trabajo de sistematizaci&oacute;n de Transparencia Mexicana (datos 2009 – 2012)
+      y del Centro Mexicano de Derecho Ambiental (datos 2013 – 2014). Los datos
+      fueron obtenidos con base en la informaci&oacute;n p&uacute;blica disponible de fondos
+      internacionales, agencias de cooperaci&oacute;n, bancos multilaterales,
+      regionales y otros actores que forman parte del financiamiento
+      climático en M&eacute;xico.
+    </p>
+  </div>
+
+</div>
+
 <div id="introduction" class="row">
   <div class="small-12 large-12 columns">
-    <h3>Financiamiento internacional para cambio climático en México</h3>
-    <p>¿Qué es? es un mapa para visualizar manera geográfica el financiamiento
-      climático que ha sido invertido a nivel nacional y estatal en México.</p>
+    <br />
+    <!-- <h3>Financiamiento internacional para cambio climático en M&eacute;xico</h3> -->
+    <!-- <p>¿Qu&eacute; es? es un mapa para visualizar manera geográfica el financiamiento
+      climático que ha sido invertido a nivel nacional y estatal en M&eacute;xico.</p> -->
   </div>
 
   <div class="small-12 large-9 columns">
@@ -46,7 +80,7 @@
   <div class="small-12 large-6 columns text-center
   small-12 large-6 columns text-center">
     <h3 style="margin-bottom:10px;">{{ main.results.length }}</h3>
-    <p>Proyectos de inversión</p>
+    <p>Proyectos de inversi&oacute;n</p>
   </div>
 </div>
 
