--- a/app/views/main.html
+++ b/app/views/main.html
@@ -79,7 +79,8 @@
   </div>
   <div class="small-12 large-6 columns text-center
   small-12 large-6 columns text-center">
-    <h3 style="margin-bottom:10px;">{{ main.results.length }}</h3>
+    <!-- <h3 style="margin-bottom:10px;">{{ main.results.length }}</h3> -->
+    <h3 style="margin-bottom:10px;">{{ main.uniqueProjectsCount() }}</h3>
     <p>Proyectos de inversi&oacute;n</p>
   </div>
 </div>
