--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,9 @@
 <div class="deck">
   <div class="content__card">
 
-    <h3 class="text-center">Financiamiento internacional para cambio climático en M&eacute;xico</h3>
+    <h1>Financiamiento clim&aacute;tico en M&eacute;xico</h1>
+    <h3>Plataforma para la identificaci&oacute;n de los recursos
+      destinados a la atenci&oacute;n del cambio clim&aacute;tico en el pa&iacute;s</h3>
 
     <p>
       La plataforma para el registro y monitoreo de los recursos
