added a date for the last file update

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -42,6 +42,7 @@
   </div>
 
   <div class="small-12 large-9 columns">
+    <p class="map__legend text-right" style="color:#757575;">&Uacute;ltima actualizaci&oacute;n: Febrero 24, 2015.</p>
     <mexico-map></mexico-map>
   </div>
 
