Updates intro text

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,20 +14,18 @@
       en el pa&iacute;s. <a ng-show="!!!showRestOfContent" ng-click="showRestOfContent=true;">Leer m&aacute;s.</a>
     </p>
     <p ng-show="showRestOfContent">
-      Con esta plataforma se busca lograr que la informaci&oacute;n sobre el
-      financiamiento clim&aacute;tico en M&eacute;xico est&eacute; sistematizada y concentrada en un
-      formato de datos abiertos que le permita a la ciudadan&iacute;a analizar y
-      comparar los datos para un mejor monitoreo, reporte y verificaci&oacute;n sobre
-      los recursos que recibe el pa&iacute;s para atender este fen&oacute;meno clim&aacute;tico.
+      Con esta plataforma se busca lograr que la informaci&oacute;n sobre el financiamiento clim&aacute;tico en
+      M&eacute;xico est&eacute; sistematizada y concentrada en un formato de datos abiertos que le permita a la 
+      ciudadan&iacute;a analizar y comparar los datos para un mejor monitoreo y reporte del financiamiento 
+      clim&aacute;tico; y en una segunda fase contar con una herramienta de verificaci&oacute;n del ejercicio del 
+      recurso destinado para estas acciones.
     </p>
     <p ng-show="showRestOfContent">
-      Los datos sobre los proyectos y los montos asignados son producto de un
-      trabajo de sistematizaci&oacute;n de Transparencia Mexicana (datos 2009 – 2012)
-      y del Centro Mexicano de Derecho Ambiental (datos 2013 – 2014). Los datos
-      fueron obtenidos con base en la informaci&oacute;n p&uacute;blica disponible de fondos
-      internacionales, agencias de cooperaci&oacute;n, bancos multilaterales,
-      regionales y otros actores que forman parte del financiamiento
-      climático en M&eacute;xico.
+      El mapa permite hacer b&uacute;squeda por año, entidad federativa, tipo de financiador, tipo de 
+      financiamiento, enfoque o &aacute;rea de financiamiento y estatus del financiamiento. Una vez que se 
+      selecciona alguno de los filtros de inter&eacute;s, se despliegan en la parte inferior del mapa los 
+      proyectos correspondientes. Para obtener la ficha de informaci&oacute;n de cada proyecto y el v&iacute;nculo 
+      a la fuente original, solo es necesario dar click en el t&iacute;tulo del proyecto.
     </p>
   </div>
 
@@ -152,7 +150,7 @@
             </tr>
 
             <tr>
-              <td class="record__property">Fecha de implementación</td>
+              <td class="record__property">Fecha de implementaci&oacute;n</td>
               <td>{{ record.implementacion }}</td>
             </tr>
 
